horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -300,6 +300,14 @@ button:active {
 
 /* added styles */
 
+html, body{
+    overflow-x: hidden;
+}
+
+body{
+    position:relative
+}
+
 /* desktop */
 /* navbar */
 
@@ -603,6 +611,7 @@ input{
         align-items: center;
         justify-content: center;
         background: rgba(217, 204, 197, 0.10);
+        -webkit-backdrop-filter: blur(30px);
         backdrop-filter: blur(30px);
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
         z-index: 10;
